changes to related work

--- a/Proposal/1introduction.tex
+++ b/Proposal/1introduction.tex
@@ -1,9 +1,11 @@
 % !TeX root = proposal.tex
 \chapter{Introduction}\label{chapter:intro}
- 
-During the last two decades, computers have evolved into intricate personal tracking devices such as smart phones, smart watches, and fitness trackers. At the same time, computers and communication technologies are being embedded in household appliances such as TVs, refrigerators, light fixtures and thermostats to create `smart home' environments. Additionally, public sensing devices track us as we move about the built environments such as a Public spaces, offices, schools, universities and so on. By using all kinds of sensors, such as cameras, microphones, GPS, accelerometers, even the simplest of appliances are able to gain knowledge of its surrounding and their users. These connected devices exchange data with each other, and further interact with our day-to-day activities. It is no longer surprising that our smart refrigerator knows what food is stored inside it and notify us that we need to buy groceries when we start our cars as we go back home from work. These smart connected devices are arguably revolutionizing our everyday life.
+The term ``Internet of Things" (IoT) was first introduced by Kevin Ashton in the context of supply chain management in 1999~\cite{ashton2009internet}. During the last two decades since the IoT concept has been proposed, computers have evolved into all kinds of small footprint internet-connected devices that are capable of: 1) tracking us as we move about the built environment such as public spaces, offices, schools, universities; 2) being embedded in household appliances such as smart phones, TVs, refrigerators, light fixtures and thermostats to create `smart home' environments; 3) tracking our personal data daily as we wear them, such as smart watches, and fitness trackers. By using all kinds of wireless sensor technologies (e.g. RFID, cameras, microphones, GPS, and accelerometers) and artificial intelligence that advances rapidly recently, these internet-connected devices are able to gain knowledge of its surrounding and their users, exchange data with each other, and further interact with third-parties to provide us better personalized services, recommendations, and advertisements. IoT can benefit both organizations and individual consumers by enhancing data collection, enabling real-time response, improving access and control of internet-connected devices, increasing efficiency, productivity, and satisfaction~\cite{weinberg2015internet, porter2014smart}, in many fields, such as tracking, transportation, household usage, healthcare and fitness~\cite{li2011smart, solima2016object, kelly2013towards, jia2012rfid, hassanalieragh2015health}.
+%The definition of the IoT now has evolved to more broad covering wide range of monitoring and control applications based on a network of sensing and actuating devices that controlled remotely through the Internet in many fields, such as tracking, transportation, household usage, healthcare and fitness~\cite{li2011smart, solima2016object, kelly2013towards, jia2012rfid, hassanalieragh2015health}.
 
-As estimated by Gartner~\cite{eddy2015gartner}, over 21 billion Internet-of-Things (IoT) devices will be in use by 2020. With its rapidly accelerating growth, IoT technology has a huge potential for social impact. However, this potential also comes with a number of key security and privacy concerns. These include facilitation of the collection of large amounts of consumer data, using that data in ways unexpected by the consumer, and security of data~\cite{lu2014overview, yu2015handling}. When users are considering adopting new IoT devices, they want to take the benefit of using those smart connected electronic devices by sharing and disclosing certain personal information to get a more personalized experience. However, such disclosed information could be accessed by other smart devices owned by themselves, other people, organizations, government, or some third-parties with good or bad purpose, which brings privacy risks to the users. It is not surprising that privacy concerns have been identified as an important underlying obstacles to the adoption of the IoT technology~\cite{knijnenburg2015user,pricewaterhousecoopers_smart_nodate}.
+A wide range of well-respected organizations has estimated that IoT will grow rapidly and bring huge social and economic potential. For example, Gartner~\cite{eddy2015gartner} has predicted over 21 billion IoT devices will be in use by 2020; IoT product and service suppliers will generate incremental revenue exceeding \$300 billion. IDC forecasts a global market for IoT will grow from \$1.9 trillion in 2013 to \$7.1 trillion in 2020~\cite{press2014idc}. However, the rise of IoT also comes with a number of key security and privacy concerns. These include facilitation of the collection of large amounts of consumer data~\cite{weinberg2015internet}, processing and storing the data in ways unexpected by the consumer~\cite{lu2014overview}, and privacy and security breach~\cite{lu2014overview, yu2015handling}.
+
+ When users are considering adopting new IoT devices, they want to take the benefits of using IoT devices by sharing and disclosing certain personal information to get a more personalized experience. However, such disclosed information could be accessed by other smart devices owned by themselves, other people, organizations, government, or some third-parties with good or bad purpose, which brings privacy risks to the users. It is not surprising that privacy concerns have been identified as an important underlying obstacles to the adoption of the IoT technology~\cite{knijnenburg2015user,pricewaterhousecoopers_smart_nodate}.
 
 In IoT environments, all the IoT devices are intended to collect information from the users to realize their functionality. Technical solutions can be used to minimize the data collected for such functionality~\cite{kobsa2006privacy,pfitzmann2001anonymity,verykios2004state}, but arguably, any useful functionality would necessitate at least some amount of personal data. Therefore, users will have to manage a trade-off between privacy and functionality: a solution that is fully privacy preserving will be limited in functionality, while a fully functional IoT solution would demand extensive data collection and sharing with others. Research has shown that user employ a method called \textit{privacy calculus}---i.e. that they make disclosure decisions by trading off the anticipated benefits with the risks of disclosure~\cite{culnan1993did,laufer1977privacy,taylor2009privacy}. However, as the diversity of IoT devices increases, it becomes more and more difficult to keep up with the many different ways in which data about ourselves is collected and disseminated. Although generally users care about their privacy, few of them in practice find time to carefully read the privacy policies or the privacy-settings that are provided to them. There are several reasons for this problem: i) Users will pay more attention to the benefit than potential risks from using IoT devices or services. ii) The privacy policies are too long, or the privacy setting of such devices are too complicated, making users irritated to finish reading/setting them. iii) As the number IoT devices rapidly increases, the numbers and options of privacy setting for all the IoT devices will also increase exponentially. Moreover, each device will have its own fine-grained privacy settings (often hidden deep within an unassuming “other settings” category in the settings interface), and many inter dependencies exist between devices—-both in privacy and functionality. Therefore, there is a large chance that users would make inconsistent privacy decisions that either limit functionality of their IoT devices or that do not protect their privacy in the end. In addition, the current user interface for setting privacy preferences of present IoT devices is imperfect even for a smartphone, not to mention the complexity of manually setting privacy preferences for numerous different other IoT devices. Hence, there is an urgent demand to solve the following research question:
 
