--- a/Proposal/2related_work.tex
+++ b/Proposal/2related_work.tex
@@ -3,7 +3,8 @@
 %In this chapter, we discuss existing research related to our topic.
 
 \section{IoT Technology}
-%The term ``Internet of Things" (IoT) was first introduced by Kevin Ashton in the context of supply chain management in 1999~\cite{ashton2009internet}. Atozri et al. define IoT as a pervasive presence around us of a variety of things or objects - such as Radio-Frequency IDentification (RFID) tags, sensors, actuators, mobile phones, etc. -- which, through unique addressing scheme, are able to interact with each other and cooperate with their neighbors to reach common goals~\cite{atzori2010internet}. As various wireless sensor technologies (e.g. RFID, embedded sensors, and actuator nodes) and artificial intelligence advance rapidly during the last two decades, the definition of the IoT has evolved to more broad covering wide range of monitoring and control applications based on a network of sensing and actuating devices that controlled remotely through the Internet in many fields, such as tracking, transportation, household usage, healthcare and fitness~\cite{li2011smart, solima2016object, kelly2013towards, jia2012rfid, hassanalieragh2015health}. IoT can benefit both organizations and individual consumers in all above mentioned domains by enhancing data collection, enabling real-time response, improving access and control of internet-connected devices, increasing efficiency, productivity, and satisfaction~\cite{weinberg2015internet, porter2014smart}. With such huge social and economic potential, IoT is estimated to grow rapidly by a wide range of well-respected organizations. For example, Gartner~\cite{eddy2015gartner} has predicted over 21 billion IoT devices will be in use by 2020; IoT product and service suppliers will generate incremental revenue exceeding \$300 billion. IDC forecasts a global market for IoT will grow from \$1.9 trillion in 2013 to \$7.1 trillion in 2020. However, there exist several key security and privacy concerns associated with the rise of the IoT, including data processing and storage, privacy and security breach, etc~\cite{weinberg2015internet, lu2014overview, yu2015handling}.
+Atozri et al. define IoT as a pervasive presence around us of a variety of things or objects - such as Radio-Frequency IDentification (RFID) tags, sensors, actuators, mobile phones, etc. -- which, through unique addressing scheme, are able to interact with each other and cooperate with their neighbors to reach common goals~\cite{atzori2010internet}. As various wireless sensor technologies (e.g. RFID, embedded sensors, and actuator nodes) and artificial intelligence advance rapidly during the last two decades, the definition of the IoT has evolved to more broad covering wide range of monitoring and control applications based on a network of sensing and actuating devices that controlled remotely through the Internet in many fields, such as tracking, transportation, household usage, healthcare and fitness~\cite{li2011smart, solima2016object, kelly2013towards, jia2012rfid, hassanalieragh2015health}.
+%IoT can benefit both organizations and individual consumers in all above mentioned domains by enhancing data collection, enabling real-time response, improving access and control of internet-connected devices, increasing efficiency, productivity, and satisfaction~\cite{weinberg2015internet, porter2014smart}. With such huge social and economic potential, IoT is estimated to grow rapidly by a wide range of well-respected organizations. For example, Gartner~\cite{eddy2015gartner} has predicted over 21 billion IoT devices will be in use by 2020; IoT product and service suppliers will generate incremental revenue exceeding \$300 billion. IDC forecasts a global market for IoT will grow from \$1.9 trillion in 2013 to \$7.1 trillion in 2020. However, there exist several key security and privacy concerns associated with the rise of the IoT, including data processing and storage, privacy and security breach, etc~\cite{weinberg2015internet, lu2014overview, yu2015handling}.
 
 Previous studies mostly focused on the technical issues of IoT technologies~\cite{fantana2013iot, lazarescu2013design, shang2012internet}. For example, Uckelmann et al. systematically explained the architecture of future IoT~\cite{uckelmann2011architectural}. Chen et al. present a vision of IoT's applications in China~\cite{chen2014vision}. Guinard et al. described the IoT’s best practices based on the web technologies and proposed several prototypes using the web principles, which connect environmental sensor nodes, energy monitoring systems, and RFID-tagged objects to the web~\cite{guinard2011internet}. However, little attention has been devoted to, from the perspective of individual consumers, understanding how will the user of IoT will trade off the above mentioned benefits and privacy concerns of IoT technology when they consider adopting it~\cite{al2016modeling, gao2014unified, mital2018adoption}.
 
