--- a/Proposal/bibliography.bib
+++ b/Proposal/bibliography.bib
@@ -369,6 +369,13 @@
 	year={2015}
 }
 
+@article{press2014idc,
+	title={Internet of Things By The Numbers: Market Estimates And Forecasts},
+	author={Press, Gil},
+	url = {https://www.forbes.com/sites/gilpress/2014/08/22/internet-of-things-by-the-numbers-market-estimates-and-forecasts/#23fab6c6b919},
+	year={2014}
+}
+
 @inproceedings{yu2015handling,
 	title={Handling a trillion (unfixable) flaws on a billion devices: Rethinking network security for the internet-of-things},
 	author={Yu, Tianlong and Sekar, Vyas and Seshan, Srinivasan and Agarwal, Yuvraj and Xu, Chenren},
