Updates from Overleaf

--- a/Proposal/3generalIoT.tex
+++ b/Proposal/3generalIoT.tex
@@ -1,5 +1,5 @@
 % !TeX root = proposal.tex
-\chapter{Recommending Privacy Settings for Generalized/Public IoT}\label{chapter:generalIoT}
+\chapter{Recommending Privacy Settings for General/Public IoT}\label{chapter:generalIoT}
 
 In chapter~\ref{chapter:acceptability}, we have discussed what are the key factors affecting users to adopt IoT systems/devices, the privacy risks caused by inappropriate privacy disclosure and the difficulties that people have when manually configuring their privacy-setting for their IoT systems/devices. To alleviate similar burden of doing this in OSN/mobile areas, researchers have applied machine learning techniques to predict people’s location-privacy preferences, thereby automatically configuring their location-privacy settings. 
 %But none similar research has been done in IoT domain yet. 
