--- a/Proposal/bibliography.bib
+++ b/Proposal/bibliography.bib
@@ -238,6 +238,56 @@
 	year={2013}
 }
 
+@inproceedings{liu2011analyzing,
+  title={Analyzing facebook privacy settings: user expectations vs. reality},
+  author={Liu, Yabing and Gummadi, Krishna P and Krishnamurthy, Balachander and Mislove, Alan},
+  booktitle={Proceedings of the 2011 ACM SIGCOMM conference on Internet measurement conference},
+  pages={61--70},
+  year={2011},
+  organization={ACM}
+}
+
+@inproceedings{madejski2012study,
+  title={A study of privacy settings errors in an online social network},
+  author={Madejski, Michelle and Johnson, Maritza and Bellovin, Steven M},
+  booktitle={Pervasive Computing and Communications Workshops (PERCOM Workshops), 2012 IEEE International Conference on},
+  pages={340--345},
+  year={2012},
+  organization={IEEE}
+}
+
+@article{furnell2015managing,
+  title={Managing privacy settings: lots of options, but beyond control?},
+  author={Furnell, Steven},
+  journal={Computer Fraud \& Security},
+  volume={2015},
+  number={4},
+  pages={8--13},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@book{brar2004privacy,
+  title={Privacy and security in ubiquitous personalized applications},
+  author={Brar, Ajay and Kay, Judy},
+  year={2004},
+  publisher={School of Information Technologies, University of Sydney}
+}
+
+@inproceedings{wisniewski2014profiling,
+  title={Profiling facebook users privacy behaviors},
+  author={Wisniewski, Pamela and Knijnenburg, Bart P and Lipford, H Richter},
+  booktitle={SOUPS2014 Workshop on Privacy Personas and Segmentation},
+  year={2014}
+}
+
+@article{acquity2014internet,
+  title={The Internet of Things: The Future of Consumer Adoption},
+  author={ACQUITY GROUP and others},
+  journal={ACQUITY GROUP},
+  year={2014}
+}
+
 @incollection{guinard2011internet,
 	title={From the internet of things to the web of things: Resource-oriented architecture and best practices},
 	author={Guinard, Dominique and Trifa, Vlad and Mattern, Friedemann and Wilde, Erik},
@@ -267,6 +317,7 @@
 	year={2014},
 	publisher={Emerald Group Publishing Limited}
 }
+
 @article{mital2018adoption,
 	title={Adoption of Internet of Things in India: A test of competing models using a structured equation modeling approach},
 	author={Mital, Monika and Chang, Victor and Choudhary, Praveen and Papa, Armando and Pani, Ashis K},
@@ -286,6 +337,97 @@
 	publisher={JSTOR}
 }
 
+@inproceedings{tsai2017turtle,
+  title={Turtle Guard: Helping Android Users Apply Contextual Privacy Preferences},
+  author={Tsai, Lynn and Wijesekera, Primal and Reardon, Joel and Reyes, Irwin and Egelman, Serge and Wagner, David and Good, Nathan and Chen, Jung-Wei},
+  booktitle={Symposium on Usable Privacy and Security (SOUPS)},
+  year={2017}
+}
+
+@article{kelley2012conundrum,
+  title={A conundrum of permissions: installing applications on an android smartphone},
+  author={Kelley, Patrick and Consolvo, Sunny and Cranor, Lorrie and Jung, Jaeyeon and Sadeh, Norman and Wetherall, David},
+  journal={Financial cryptography and data security},
+  pages={68--79},
+  year={2012},
+  publisher={Springer}
+}
+
+@article{fu2014field,
+  title={A field study of run-time location access disclosures on android smartphones},
+  author={Fu, Huiqing and Yang, Yulong and Shingte, Nileema and Lindqvist, Janne and Gruteser, Marco},
+  journal={Proc. Usable Security (USEC)},
+  pages={10--pp},
+  volume={14},
+  year={2014}
+}
+
+@inproceedings{chakraborty2014ipshield,
+  title={ipShield: A Framework For Enforcing Context-Aware Privacy.},
+  author={Chakraborty, Supriyo and Shen, Chenguang and Raghavan, Kasturi Rangan and Shoukry, Yasser and Millar, Matt and Srivastava, Mani B},
+  booktitle={NSDI},
+  pages={143--156},
+  year={2014}
+}
+
+@inproceedings{ref:chaudhry,
+  title={Personal data: thinking inside the box},
+  author={Chaudhry, Amir and Crowcroft, Jon and Howard, Heidi and Madhavapeddy, Anil and Mortier, Richard and Haddadi, Hamed and McAuley, Derek},
+  booktitle={Proceedings of The Fifth Decennial Aarhus Conference on Critical Alternatives},
+  pages={29--32},
+  year={2015},
+  organization={Aarhus University Press}
+}
+
+@inproceedings{ref:vescovi,
+  title={Building an eco-system of trusted services via user control and transparency on personal data},
+  author={Vescovi, Michele and Moiso, Corrado and Pasolli, Mattia and Cordin, Lorenzo and Antonelli, Fabrizio},
+  booktitle={IFIP International Conference on Trust Management},
+  pages={240--250},
+  year={2015},
+  organization={Springer}
+}
+
+@inproceedings{almuhimedi2015your,
+  title={Your location has been shared 5,398 times!: A field study on mobile app privacy nudging},
+  author={Almuhimedi, Hazim and Schaub, Florian and Sadeh, Norman and Adjerid, Idris and Acquisti, Alessandro and Gluck, Joshua and Cranor, Lorrie Faith and Agarwal, Yuvraj},
+  booktitle={Proceedings of the 33rd annual ACM conference on human factors in computing systems},
+  pages={787--796},
+  year={2015},
+  organization={ACM}
+}
+
+@article{knijnenburg2017privacy,
+  title={Privacy? I Can’t Even! Making a Case for User-Tailored Privacy},
+  author={Knijnenburg, Bart P},
+  journal={IEEE Security \& Privacy},
+  volume={15},
+  number={4},
+  pages={62--67},
+  year={2017},
+  publisher={IEEE}
+}
+
+@inproceedings{wijesekera2017feasibility,
+  title={The feasibility of dynamically granted permissions: Aligning mobile privacy with user preferences},
+  author={Wijesekera, Primal and Baokar, Arjun and Tsai, Lynn and Reardon, Joel and Egelman, Serge and Wagner, David and Beznosov, Konstantin},
+  booktitle={Security and Privacy (SP), 2017 IEEE Symposium on},
+  pages={1077--1093},
+  year={2017},
+  organization={IEEE}
+}
+
+@article{weerakkody2013examining,
+  title={Examining the influence of intermediaries in facilitating e-government adoption: An empirical investigation},
+  author={Weerakkody, Vishanth and El-Haddadeh, Ramzi and Al-Sobhi, Faris and Shareef, Mahmud Akhter and Dwivedi, Yogesh K},
+  journal={International Journal of Information Management},
+  volume={33},
+  number={5},
+  pages={716--725},
+  year={2013},
+  publisher={Elsevier}
+}
+
 @inproceedings{kobsa2006privacy,
   title={Privacy-enhanced personalization},
   author={Kobsa, Alfred and Chellappa, Ramnath K and Spiekermann, Sarah},
@@ -293,6 +435,26 @@
   pages={1631--1634},
   year={2006},
   organization={ACM}
+}
+
+@article{wang2009interactive,
+  title={Interactive decision aids for consumer decision making in e-commerce: The influence of perceived strategy restrictiveness},
+  author={Wang, Weiquan and Benbasat, Izak},
+  journal={MIS quarterly},
+  pages={293--320},
+  year={2009},
+  publisher={JSTOR}
+}
+
+@article{lian2015critical,
+  title={Critical factors for cloud based e-invoice service adoption in Taiwan: An empirical study},
+  author={Lian, Jiunn-Woei},
+  journal={International Journal of Information Management},
+  volume={35},
+  number={1},
+  pages={98--109},
+  year={2015},
+  publisher={Elsevier}
 }
 
 @inproceedings{pfitzmann2001anonymity,
@@ -369,7 +531,7 @@
 	year={2015}
 }
 
-@article{press2014idc,
+@MISC{press2014idc,
 	title={Internet of Things By The Numbers: Market Estimates And Forecasts},
 	author={Press, Gil},
 	url = {https://www.forbes.com/sites/gilpress/2014/08/22/internet-of-things-by-the-numbers-market-estimates-and-forecasts/#23fab6c6b919},
@@ -692,6 +854,34 @@
 	year = {2015}
 }
 
+@inproceedings{egelman2009timing,
+  title={Timing is everything?: the effects of timing and placement of online privacy indicators},
+  author={Egelman, Serge and Tsai, Janice and Cranor, Lorrie Faith and Acquisti, Alessandro},
+  booktitle={Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+  pages={319--328},
+  year={2009},
+  organization={ACM}
+}
+
+@article{benisch2011capturing,
+  title={Capturing location-privacy preferences: quantifying accuracy and user-burden tradeoffs},
+  author={Benisch, Michael and Kelley, Patrick Gage and Sadeh, Norman and Cranor, Lorrie Faith},
+  journal={Personal and Ubiquitous Computing},
+  volume={15},
+  number={7},
+  pages={679--694},
+  year={2011},
+  publisher={Springer-Verlag}
+}
+
+@article{brodie2004personalization,
+  title={How Personalization of an E-Commerce Website Affects Consumer Trust},
+  author={Brodie, C and Karat, CM and Karat, J},
+  journal={Designing Personalized User Experience for eCommerce, Karat, J., Ed. Dordrecht, Netherlands: Kluwer Academic Publishers},
+  pages={185--206},
+  year={2004}
+}
+
 @inproceedings{watson12,
 	Author = {Watson, Jason and Besmer, Andrew and Lipford, Heather Richter},
 	Booktitle = {Proceedings of the 8th {Symposium} on {Usable} {Privacy} and {Security}},
@@ -850,14 +1040,6 @@
 	year={2017}
 }
 
-@inproceedings{madejski2012study,
-	title={A study of privacy settings errors in an online social network},
-	author={Madejski, Michelle and Johnson, Maritza and Bellovin, Steven M},
-	booktitle={IEEE International Conference on Pervasive Computing and Communications Workshops},
-	pages={340--345},
-	year={2012},
-}
-
 @inproceedings{olson2005study,
 	title={A study of preferences for sharing and privacy},
 	author={Olson, Judith S and Grudin, Jonathan and Horvitz, Eric},
@@ -887,6 +1069,15 @@
 	year={2013},
 }
 
+@article{anthony2007privacy,
+  title={Privacy in location-aware computing environments},
+  author={Anthony, Denise and Henderson, Tristan and Kotz, David},
+  journal={IEEE Pervasive Computing},
+  number={4},
+  pages={64--72},
+  year={2007},
+  publisher={IEEE}
+}
 
 @inproceedings{williams2016perfect,
 	title={The perfect storm: The privacy paradox and the Internet-of-Things},
@@ -1153,7 +1344,6 @@
 	shorttitle = {Privacy preserving {Internet} of {Things}},
 	url = {http://www.sciencedirect.com/science/article/pii/S0167739X17303308},
 	doi = {10.1016/j.future.2017.03.001},
-	abstract = {The Internet of Things (IoT) is the latest web evolution that incorporates billions of devices that are owned by different organisations and people who are deploying and using them for their own purposes. IoT-enabled harnessing of the information that is provided by federations of such IoT devices (which are often referred to as IoT things) provides unprecedented opportunities to solve internet-scale problems that have been too big and too difficult to tackle before. Just like other web-based information systems, IoT must also deal with the plethora of Cyber Security and privacy threats that currently disrupt organisations and can potentially hold the data of entire industries and even countries for ransom. To realise its full potential, IoT must deal effectively with such threats and ensure the security and privacy of the information collected and distilled from IoT devices. However, IoT presents several unique challenges that make the application of existing security and privacy techniques difficult. This is because IoT solutions encompass a variety of security and privacy solutions for protecting such IoT data on the move and in store at the device layer, the IoT infrastructure/platform layer, and the IoT application layer. Therefore, ensuring end-to-end privacy across these three IoT layers is a grand challenge in IoT. In this paper, we tackle the IoT privacy preservation problem. In particular, we propose innovative techniques for privacy preservation of IoT data, introduce a privacy preserving IoT Architecture, and also describe the implementation of an efficient proof of concept system that utilises all these to ensure that IoT data remains private. The proposed privacy preservation techniques utilise multiple IoT cloud data stores to protect the privacy of data collected from IoT. The proposed privacy preserving IoT Architecture and proof of concept implementation are based on extensions of OpenIoT - a widely used open source platform for IoT application development. Experimental evaluations are also provided to validate the efficiency and performance outcomes of the proposed privacy preserving techniques and architecture.},
 	urldate = {2018-08-21},
 	journal = {Future Generation Computer Systems},
 	author = {Jayaraman, Prem Prakash and Yang, Xuechao and Yavari, Ali and Georgakopoulos, Dimitrios and Yi, Xun},
@@ -1375,14 +1565,6 @@
 	note = {Accessed: 2017-04-15}
 }
 
-@inproceedings{acquisti2006imagined,
-  title={Imagined communities: Awareness, information sharing, and privacy on the Facebook},
-  author={Acquisti, Alessandro and Gross, Ralph},
-  booktitle={International workshop on privacy enhancing technologies},
-  pages={36--58},
-  year={2006}
-}
-
 @misc{Amazon,
 	title = {Goodbye privacy, hello 'Alexa': Amazon Echo, the home robot who hears it all},
 	howpublished = {\url{http://https://www.theguardian.com/technology/2015/nov/21/amazon-echo-alexa-home-robot-privacy-cloud}},
@@ -1467,16 +1649,6 @@
 	pages={724--725},
 	year={2003},
 }
-
-
-@inproceedings{madejski2012study,
-  title={A study of privacy settings errors in an online social network},
-  author={Madejski, Michelle and Johnson, Maritza and Bellovin, Steven M},
-  booktitle={IEEE International Conference on Pervasive Computing and Communications Workshops},
-  pages={340--345},
-  year={2012},
-}
-
 
 @inproceedings{ravichandran2009capturing,
 	title={Capturing social networking privacy preferences},
@@ -1580,10 +1752,10 @@ url = {https://www.usenix.org/conference/soups2016/workshop-program/wpi/presenta
 	pages = {62--67}
 }
 
-@article{lin2014modeling,
+@inproceedings{lin2014modeling,
   title={Modeling users’ mobile app privacy preferences: Restoring usability in a sea of permission settings},
   author={Lin, Jialiu and Liu, Bin and Sadeh, Norman and Hong, Jason I},
-  booktitle={Tenth Symposium on Usable Privacy and Security ($\{$SOUPS$\}$ 2014)},
+  booktitle={Symposium on Usable Privacy and Security (SOUPS)},
   pages={199--212},
   year={2014}
 }
