--- a/Proposal/1introduction.tex
+++ b/Proposal/1introduction.tex
@@ -1,21 +1,20 @@
 % !TeX root = proposal.tex
 \chapter{Introduction}\label{chapter:intro}
-The term ``Internet of Things" (IoT) was first introduced by Kevin Ashton in the context of supply chain management in 1999~\cite{ashton2009internet}. During the last two decades since the IoT concept has been proposed, computers have evolved into all kinds of small footprint internet-connected devices that are capable of: 1) tracking us as we move about the built environment such as public spaces, offices, schools, universities; 2) being embedded in household appliances such as smart phones, TVs, refrigerators, light fixtures and thermostats to create `smart home' environments; 3) tracking our personal data daily as we wear them, such as smart watches, and fitness trackers. By using all kinds of wireless sensor technologies (e.g. RFID, cameras, microphones, GPS, and accelerometers) and artificial intelligence that advances rapidly recently, these internet-connected devices are able to gain knowledge of its surrounding and their users, exchange data with each other, and further interact with third-parties to provide us better personalized services, recommendations, and advertisements. IoT can benefit both organizations and individual consumers by enhancing data collection, enabling real-time response, improving access and control of internet-connected devices, increasing efficiency, productivity, and satisfaction~\cite{weinberg2015internet, porter2014smart}, in many fields, such as tracking, transportation, household usage, healthcare and fitness~\cite{li2011smart, solima2016object, kelly2013towards, jia2012rfid, hassanalieragh2015health}.
-%The definition of the IoT now has evolved to more broad covering wide range of monitoring and control applications based on a network of sensing and actuating devices that controlled remotely through the Internet in many fields, such as tracking, transportation, household usage, healthcare and fitness~\cite{li2011smart, solima2016object, kelly2013towards, jia2012rfid, hassanalieragh2015health}.
+During the last two decades, computers have evolved into all kinds of small footprint internet-connected devices that are capable of: 1) tracking us as we move about the built environment such as public spaces, offices, schools, universities; 2) being embedded in household appliances such as smart phones, TVs, refrigerators, light fixtures and thermostats to create `smart home' environments; 3) tracking our personal data daily as we wear them, such as smart watches, and fitness trackers. All these computers/devices have been integrated seamlessly into people's live, which is defined as ``Internet of Things". By using all kinds of wireless sensor technologies (e.g. RFID, cameras, microphones, GPS, and accelerometers) and artificial intelligence that advances rapidly recently, these internet-connected devices are able to gain knowledge of its surrounding and their users, exchange data with each other, monitor and control remotely controlled devices, and further interact with third-parties to provide us better personalized services, recommendations, and advertisements. They have been widely used in many fields, such as tracking, transportation, household usage, healthcare and fitness~\cite{li2011smart, solima2016object, kelly2013towards, jia2012rfid, hassanalieragh2015health}.
 
 A wide range of well-respected organizations has estimated that IoT will grow rapidly and bring huge social and economic potential. For example, Gartner~\cite{eddy2015gartner} has predicted over 21 billion IoT devices will be in use by 2020; IoT product and service suppliers will generate incremental revenue exceeding \$300 billion. IDC forecasts a global market for IoT will grow from \$1.9 trillion in 2013 to \$7.1 trillion in 2020~\cite{press2014idc}. However, the rise of IoT also comes with a number of key security and privacy concerns. These include facilitation of the collection of large amounts of consumer data~\cite{weinberg2015internet}, processing and storing the data in ways unexpected by the consumer~\cite{lu2014overview}, and privacy and security breach~\cite{lu2014overview, yu2015handling}.
 
- When users are considering adopting new IoT devices, they want to take the benefits of using IoT devices by sharing and disclosing certain personal information to get a more personalized experience. However, such disclosed information could be accessed by other smart devices owned by themselves, other people, organizations, government, or some third-parties with good or bad purpose, which brings privacy risks to the users. It is not surprising that privacy concerns have been identified as an important underlying obstacles to the adoption of the IoT technology~\cite{knijnenburg2015user,pricewaterhousecoopers_smart_nodate}.
+%When users are considering adopting new IoT devices, they want to take the benefits of using IoT devices by sharing and disclosing certain personal information to get a more personalized experience. However, such disclosed information could be accessed by other smart devices owned by themselves, other people, organizations, government, or some third-parties with good or bad purpose, which brings privacy risks to the users. It is not surprising that privacy concerns have been identified as an important underlying obstacles to the adoption of the IoT technology~\cite{knijnenburg2015user,pricewaterhousecoopers_smart_nodate}.
 
 In IoT environments, all the IoT devices are intended to collect information from the users to realize their functionality. Technical solutions can be used to minimize the data collected for such functionality~\cite{kobsa2006privacy,pfitzmann2001anonymity,verykios2004state}, but arguably, any useful functionality would necessitate at least some amount of personal data. Therefore, users will have to manage a trade-off between privacy and functionality: a solution that is fully privacy preserving will be limited in functionality, while a fully functional IoT solution would demand extensive data collection and sharing with others. Research has shown that user employ a method called \textit{privacy calculus}---i.e. that they make disclosure decisions by trading off the anticipated benefits with the risks of disclosure~\cite{culnan1993did,laufer1977privacy,taylor2009privacy}. However, as the diversity of IoT devices increases, it becomes more and more difficult to keep up with the many different ways in which data about ourselves is collected and disseminated. Although generally users care about their privacy, few of them in practice find time to carefully read the privacy policies or the privacy-settings that are provided to them. There are several reasons for this problem: i) Users will pay more attention to the benefit than potential risks from using IoT devices or services. ii) The privacy policies are too long, or the privacy setting of such devices are too complicated, making users irritated to finish reading/setting them. iii) As the number IoT devices rapidly increases, the numbers and options of privacy setting for all the IoT devices will also increase exponentially. Moreover, each device will have its own fine-grained privacy settings (often hidden deep within an unassuming “other settings” category in the settings interface), and many inter dependencies exist between devices—-both in privacy and functionality. Therefore, there is a large chance that users would make inconsistent privacy decisions that either limit functionality of their IoT devices or that do not protect their privacy in the end. In addition, the current user interface for setting privacy preferences of present IoT devices is imperfect even for a smartphone, not to mention the complexity of manually setting privacy preferences for numerous different other IoT devices. Hence, there is an urgent demand to solve the following research question:
 
 \textbf{Can we simplify the task of managing privacy setting for users of different IoT contexts?}
 
-Prior research (chapter 2) has explored different approaches to this problem in other domains, including providing transparency, Privacy nudges. However, neither of them provides a satisfying solution in the IoT domain. Providing transparency and control does give users the freedom of managing their privacy in IoT according to their own privacy decisions, but privacy decision making is often not rational~\cite{knijnenburg2015user}. Thus, such extra transparency and control may increase the difficulty of setting appropriate privacy for users. Privacy nudges are usually implemented in the form of prompts, which will create constant noises given that the IoT systems usually work in the background. At the same time, they lack the personalization to the inherent diversity of users’ privacy preferences and the context-dependency of their decisions.
+Prior research (chapter 2) has explored different approaches to this problem in other domains, including providing 1) transparency and control~\cite{egelman2009timing,acquisti2006imagined,knijnenburg2015user,benisch2011capturing,brodie2004personalization}, and 2) privacy nudges~\cite{almuhimedi2015your,liu2016follow,fu2014field,liu2016follow}. However, neither of them provides a satisfying solution in the IoT domain. Providing transparency and control does give users the freedom of managing their privacy in IoT according to their own privacy decisions, but privacy decision making is often not rational~\cite{knijnenburg2015user}. Thus, such extra transparency and control may increase the difficulty of setting appropriate privacy for users. Privacy nudges are usually implemented in the form of prompts, which will create constant noises given that the IoT systems usually work in the background. At the same time, they lack the personalization to the inherent diversity of users’ privacy preferences and the context-dependency of their decisions.
 
 To solve these problems in the IoT domain, a more fundamental understanding of the logic behind IoT users' privacy decisions in different IoT contexts is needed. I therefore conducted a series of studies to contextualize the IoT users' decision making characteristics, and designed a set of privacy-setting interfaces to help them manage their privacy settings in various IoT contexts based on the deeper understanding of users' privacy decision behavior. 
 
-In this proposal, I first present the background and related work of this proposal in Chapter~\ref{chapter:Relatedwork}. Then, I present three studies on recommending privacy settings for different IoT environments, namely general/public IoT in Chapter~\ref{chapter:generalIoT}, household IoT in Chapter~\ref{chapter:householdIoT}, and fitness IoT in Chapter \ref{chapter:fitnessIoT}, respectively. One should observe that the above three studies follow an decreasing order in terms of the IoT context scope. In the first study, I focused on the privacy decision on the entities collecting information from the users, while in the following two studies the context was moved to a more narrow environment (household IoT and fitness IoT), which shifts the focus to a more contextual evaluation of the content or nature of the information. This explains why in the first two studies, the dimensions used to analyze the context are the parameters of the corresponding IoT scenarios; and for the third study, the focus is on the fitness tracker permission questions. Note that the above three works all utilized a `` data-driven design" --- We first use statistical analysis (applicable to the first two works) and machine learning techniques on the collected user data to gain the underlying insights of IoT users' privacy decision behavior; and then a set of ``smart" privacy defaults/profiles were created based on these insights, and finally design a set of interfaces to incorporate these privacy default/profiles. Users can apply these smart default/profiles by either a single click (applicable to the first two work) or answering a few related questions (applicable to the third work). The current biggest limitation for such ``data-driven" approach is that we didn't test any of the presented interfaces, so we don't know what level of complexity (both in terms of the user interface and the in terms of the profiles). Thus for my proposed work, I will address this limitation by discussing our proposed study to evaluate the new interface of recommending privacy-settings for household IoT in Chapter~\ref{chapter:evaluation}. Finally, I conclude this proposal in Chapter~\ref{chapter:conclusion}.
+In this proposal, I first present the background and related work of this proposal in Chapter~\ref{chapter:Relatedwork}. Then, I present three studies on recommending privacy settings for different IoT environments, namely general/public IoT in Chapter~\ref{chapter:generalIoT}, household IoT in Chapter~\ref{chapter:householdIoT}, and fitness IoT in Chapter \ref{chapter:fitnessIoT}, respectively. One should observe that the above three studies follow an decreasing order in terms of the IoT context scope. In the first study, I focused on the privacy decision on the entities collecting information from the users, while in the following two studies the context was moved to a more narrow environment (household IoT and fitness IoT), which shifts the focus to a more contextual evaluation of the content or nature of the information. This explains why in the first two studies, the dimensions used to analyze the context are the parameters of the corresponding IoT scenarios; and for the third study, the focus is on the fitness tracker permission questions. Note that the above three works all utilized a `` data-driven design" --- We first use statistical analysis (applicable to the first two works) and machine learning techniques on the collected user data to gain the underlying insights of IoT users' privacy decision behavior; and then a set of ``smart" privacy defaults/profiles were created based on these insights. Finally, we design a set of interfaces to incorporate these privacy default/profiles. Users can apply these smart defaults/profiles by either a single click (applicable to the first two works) or by answering a few related questions (applicable to the third work). The current biggest limitation for such ``data-driven" approach is that we did not test any of the presented interfaces, so we don't know what level of complexity (both in terms of the user interface and the in terms of the profiles) is most suitable. Thus for my proposed work, I will address this limitation by discussing our proposed study to evaluate the new interface of recommending privacy-settings for household IoT in Chapter~\ref{chapter:evaluation}. Finally, I conclude this proposal in Chapter~\ref{chapter:conclusion}.
 
 %Chapter~\ref{chapter:Relatedwork} presents the background and related work of this proposal and we conclude our proposal in Chapter~\ref{chapter:conclusion}.
 
