--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -103,12 +103,11 @@
 	\setcounter{page}{1}
 	\input{1introduction.tex}
 	\input{2related_work.tex}
-	%\input{2acceptability.tex}
-	%\input{3generalIoT.tex}
-	%\input{4householdIoT.tex}
-	%\input{5fitnessIoT.tex}
-	%\input{6evaluation.tex}
-	%\input{8conclusion.tex}
+	\input{3generalIoT.tex}
+	\input{4householdIoT.tex}
+	\input{5fitnessIoT.tex}
+	\input{6evaluation.tex}
+	\input{7conclusion.tex}
 	
 	%
 	% The appendices are optional.  This is the format for two or more.
